# citra

./: CMakeLists.txt
src/: CMakeLists.txt
src/citra_qt/debugger/: graphics_framebuffer.cpp
src/common/: CMakeLists.txt  emu_window.cpp  emu_window.h  file_util.cpp  file_util.h  hash.cpp  memory_util.cpp  memory_util.h  misc.cpp  profiler.cpp  profiler.h  profiler_reporting.h  string_util.cpp  synchronized_wrapper.h
src/common/logging/: backend.cpp  filter.h
src/core/gdbstub/: gdbstub.cpp
src/core/hle/service/fs/: archive.cpp  fs_user.cpp
src/core/loader/: ncch.cpp
src/video_core/: pica.h  rasterizer.cpp
